Mega menu search: Prevent a line break in the text input field
* by properly hiding the more button (when necessary) and explicitly
setting the input field width
* also: renamed variable single-column-mega-menu to
single-column-mega-menu-width

--- a/web/htdocs/themes/facelift/scss/_mega_menu.scss
+++ b/web/htdocs/themes/facelift/scss/_mega_menu.scss
@@ -62,6 +62,7 @@
     }
 
     input[type="text"] {
+      width: 175px;
       padding: 6px 0 6px $spacing;
       background: transparent;
       box-shadow: none;
@@ -193,7 +194,7 @@
       }
 
       &.single_column {
-        width: $single-column-mega-menu;
+        width: $single-column-mega-menu-width;
       }
 
       a {
@@ -230,6 +231,10 @@
             a.more {
               float: right;
             }
+
+            &.hidden {
+              display: none;
+            }
           }
         }
       }
@@ -252,7 +257,7 @@
         }
 
         &.search > div.topic {
-          width: $single-column-mega-menu;
+          width: $single-column-mega-menu-width;
 
           li a {
             overflow: hidden;
@@ -268,7 +273,7 @@
           box-sizing: border-box;
 
           &.single_column {
-            width: $single-column-mega-menu;
+            width: $single-column-mega-menu-width;
           }
 
           input[type="button"] {
@@ -421,7 +426,7 @@
 
             li {
               width: auto;
-              max-width: $single-column-mega-menu - 60px;
+              max-width: $single-column-mega-menu-width - 60px;
               padding-left: 0;
 
               &.show_all_items {
